# lcp-sql-fetch

./: .gitignore  Cargo.toml  README.md
.gemini/prompts/: setup-lcp-sql-fetch.md
.github/workflows/: release.yml
examples/: describe_tables.sql  list_columns.sql  list_tables.sql  storage_audit.sql  user_security_audit.sql
src/: cli.rs  main.rs
src/core/: env.rs  lcp.rs  mod.rs
src/utils/: lcp_utils.rs  mod.rs  xml.rs
